--- a/TODO.txt
+++ b/TODO.txt
@@ -5,3 +5,7 @@ Blumgi Slime: A physics-based one-button game.
 Blumgi Bloom: A game with a bloom theme, according to Poki.
 Blumgi Castle: A game with a castle theme.
 Blumgi Ball: A ball-themed game.
+
+
+Nate monkeymart
+jet crazycattle3d
